# x-terminal

./: README.md  context.md
backend/: .env.example  .gitignore  README.md  db.sqlite3  main.py  pyproject.toml  requirements.txt  run.sh  setup.sh  test.sh
backend/adapter/: models.py  rate_limiter.py
backend/adapter/grok/: __init__.py  cli.py  mocks.py
backend/adapter/x/: __init__.py  cli.py  x_adaptor.py
backend/adaptors/: x_adaptor.py
backend/aggregator/: __init__.py
backend/api/: __init__.py  api.py
backend/core/: __init__.py
backend/database/: __init__.py  schema.sql
backend/monitoring/: __init__.py
backend/services/: __init__.py  location_service.py  trends_cache.py
backend/tests/: conftest.py  test_aggregator.py  test_api.py  test_core.py  test_grok_adapter.py  test_x_adapter.py
frontend/: README.md  package-lock.json  package.json
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/actions/: clickOutside.ts
frontend/src/lib/components/: CreateTopicPopover.svelte
frontend/src/lib/items/: LiveBadge.svelte  ProfilePicture.svelte  ProfilePictureCollection.svelte  SentimentTracker.svelte  TimelineEvent.svelte  TopicSelection.svelte
frontend/src/lib/nav/: GridLayout.svelte  Header.svelte
frontend/src/lib/utils/: time.ts
frontend/src/lib/windows/: PanelNavigator.svelte  Selection.svelte  Timeline.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
frontend/src/routes/topics/: +page.svelte
prompts/: architect.md  backend_builder.md
