[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-terminal-backend"
version = "0.1.0"
description = "Backend for X Terminal - LiveOps Dashboard for X + Grok"
authors = [
    {name = "X Terminal Team"}
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.5.3",
    "python-dotenv==1.0.0",
    "xai-sdk==1.5.0",
    "httpx==0.25.2",
    "requests==2.31.0",
    "structlog==23.2.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "isort==5.12.0",
    "mypy==1.7.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
